--- a/styles/main.css
+++ b/styles/main.css
@@ -9,14 +9,16 @@
   --blue-green: #099d8d;
   --font-family-header: "Rubik", sans-serif;
 }
-header {
+header{
   text-transform: uppercase;
-  position: sticky;
+  position: fixed;
+  width: 100%;
   z-index: 100;
   top: 0;
   margin: 0;
   color: var(--white);
   font-family: var(--font-family-header);
+  opacity: 90%;
 }
 .name {
   background-color: var(--blue-green);
@@ -41,24 +43,23 @@ ul {
 }
 /*AQUI VA EL CSS DE RAQUEL*/
 
-/* .hero{
-  background-image: url(../images/metamorfosis.jpg);
-  background-repeat: no-repeat;
-  background-size: cover; 
-  background-position: center;
-  position: relative;
-  width: 100%;
+ .hero{
+  background-image: url(../images/imagen.jpg);
   height: 500px;
-}
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}  
 .lema{
+  background-color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: var(--black);
-  font-size: 18px;
+  font-size: 25px;
   text-align: center;
-  margin-left: 15px;
-  margin-right: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-} */
+  margin: 20px 20px;
+  z-index: 100;
+  transform: translateY(-80%)
+} 
 
 .section1{
   text-align: center;
@@ -66,23 +67,46 @@ ul {
   margin-right: 15px;
 }
 .team{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #14d9c4;
   font-size: 24px;
   text-align: center;
   text-transform: uppercase;
+  margin-top: 0;
+  padding-top: 0;
+}
+.section1 div{
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.simbol{
+  background-color: white;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: -25px;
+  justify-content: center;
+  rotate: 45deg;
+  
 }
 .section2{
   background-color: var(--cool-grey);
   text-align: center;
   padding: 10px 15px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  opacity: 0.2;
 }
 .skills{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #099d8d;
   font-size: 22px;
   text-align: center;
 }
 .parrafo{
-  font size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16px;
   text-align: center;
 }
 
