started partial scss

--- a/src/html/partials/team_adalabers.html
+++ b/src/html/partials/team_adalabers.html
@@ -48,7 +48,7 @@
   </article>
   <div class="card-container">
     <article class="card">
-      <img class="picture" src="./assets/images/photo-cris.JPEG" alt="Foto de Cris.">
+      <img class="picture" src="./assets/images/photo-cris.jpeg" alt="Foto de Cris.">
 
 
       <h3 class="picture-title">Cristina Rodríguez García</h3>
