--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,288 +1,6 @@
-// @import 'core/variables';
-// @import 'core/reset';
-// @import 'components/code';
-// @import 'components/links';
-// @import 'layout/page';
-// @import 'layout/header';
-// @import 'layout/footer';
-// @import 'pages/index';
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-:root {
-  --black: #000;
-  --light-grey-blue: rgba(184, 184, 185, 0.1);
-  --aqua: #14d9c4;
-  --black-8: rgba(0, 0, 0, 0.08);
-  --gunmetal: #54585a;
-  --white: #fff;
-  --cool-grey: #b8b8b9;
-  --blue-green: #099d8d;
-  --font-family-header: "Rubik", sans-serif;
-  --font-family-cards: "Open Sans", sans-serif;
-}
-header {
-  text-transform: uppercase;
-  position: fixed;
-  width: 100%;
-  z-index: 100;
-  top: 0;
-  margin: 0;
-  color: var(--white);
-  font-family: var(--font-family-header);
-  opacity: 90%;
-}
-.name {
-  background-color: var(--blue-green);
-  height: 60px;
-  padding: 15px;
-  font-size: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-ul {
-  list-style: none;
-  text-decoration: none;
-}
-.navegation {
-  background-color: var(--aqua);
-  font-size: 15px;
-  padding: 8px 17px 7px 16px;
-  display: flex;
-  justify-content: center;
-  justify-content: space-around;
-}
-/*AQUI VA EL CSS DE RAQUEL*/
-
-.hero {
-  background-image: url(../images/imagen.jpg);
-  height: 500px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.lema {
-  background-color: white;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: var(--black);
-  font-size: 25px;
-  text-align: center;
-  margin: 20px 20px;
-  z-index: 100;
-  transform: translateY(-80%);
-}
-
-.section1 {
-  text-align: center;
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
-.team {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: #14d9c4;
-  font-size: 24px;
-  text-align: center;
-  text-transform: uppercase;
-  margin-top: 0;
-  padding-top: 0;
-}
-.section1 div {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-.simbol {
-  background-color: white;
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  top: -25px;
-  justify-content: center;
-  rotate: 45deg;
-}
-.section2 {
-  background-color: var(--cool-grey);
-  text-align: center;
-  padding: 10px 15px;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  opacity: 0.2;
-}
-
-.skills {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: #099d8d;
-  font-size: 22px;
-  text-align: center;
-}
-
-
-.parrafo {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 16px;
-  text-align: center;
-}
-
-/*AQUÍ EMPIEZA EL CSS DEL BODY HECHO POR ANA Y SILVIA*/
-
-.about-title {
-  color: #099d8d;
-  font-family: var(--font-family-header);
-  font-weight: 500;
-  font-size: 24px;
-  text-transform: uppercase;
-  text-align: center;
-  padding: 20px;
-}
-
-.card-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.card {
-  width: 100%;
-  max-width: 300px;
-  margin: 0 15px;
-  text-align: center;
-}
-
-.picture {
-  border: 5px solid var(--black-8);
-  border-radius: 4px;
-  width: 185px;
-  max-height: 185px;
-}
-
-.picture-title {
-  font-family: var(--font-family-cards);
-  font-weight: 600;
-  font-size: 20px;
-  padding: 15px;
-  align-content: center;
-}
-
-.picture-description {
-  color: var(--gunmetal);
-  font-family: var(--font-family-cards);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  align-content: center;
-  margin-top: 5px;
-}
-
-.icon-box {
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-}
-
-.icons {
-  display: flex;
-  gap: 15px;
-  padding: 20px;
-  text-align: center;
-}
-
-.icon {
-  color: var(--blue-green);
-}
-
-/*AQUI VA EL CSS DE ANDREA*/
-
-.footer {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: 250px;
-}
-
-.footer-name {
-  padding-top: 30px;
-}
-
-.footer-nav {
-  padding-top: 20px;
-  display: flex;
-}
-
-.ul {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.footer-item {
-  list-style: none;
-  text-transform: uppercase;
-  justify-content: center;
-}
-
-.list {
-  text-decoration: none;
-  color: black;
-}
-
-.footer-img {
-  padding-top: 30px;
-}
-
-.logo {
-  height: 45px;
-  width: 115.9px;
-}
+@import 'core/reset';
+@import 'core/variables';
+@import 'layout/header';
+@import 'layout/hero';
+@import 'layout/team_adalabers';
+@import 'layout/footer';
