--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,12 @@
-// fonts
-$font-main: 'Roboto', sans-serif;
 
-// colors
-$color-bg: #f3f4f5;
-$color-secondary: #999;
+    $black: #000;
+    $light-grey-blue: rgba(184, 184, 185, 0.1);
+    $aqua: #14d9c4;
+    $black-8: rgba(0, 0, 0, 0.08);
+    $gunmetal: #54585a;
+    $white: #fff;
+    $cool-grey: #b8b8b9;
+    $blue-green: #099d8d;
+    $font-family-header: "Rubik", sans-serif;
+    $font-family-cards: "Open Sans", sans-serif;
+    
