--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,5 +1,32 @@
-.page__header {
+header {
+  text-transform: uppercase;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  top: 0;
+  margin: 0;
+  color: $white;
+  font-family: $font-family-header;
+  opacity: 90%;
+}
+.name {
+  background-color: $blue-green;
+  height: 60px;
+  padding: 15px;
+  font-size: 16px;
   display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 3rem;
+  justify-content: center;
+  align-items: center;
+}
+ul {
+  list-style: none;
+  text-decoration: none;
+}
+.navegation {
+  background-color: $aqua;
+  font-size: 15px;
+  padding: 8px 17px 7px 16px;
+  display: flex;
+  justify-content: center;
+  justify-content: space-around;
 }
