--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,19 +1,21 @@
 <footer class="footer">
-  <div class="footer-name">
-    <p>Nombre del grupo ©2023</p>
+  <div class="footer__name">
+    <p>Rebirth Web ©2023</p>
   </div>
 
-  <nav class="footer-nav">
-    <ul class="ul">
-      <li class="footer-item"><a class="list" href="#">Equipo</a></li>
-      <li class="footer-item">
-        <a class="list" href="#">Quiénes Somos</a>
+  <nav class="footer__nav">
+    <ul class="footer__nav__ul">
+      <li class="footer__item"><a class="footer__link" href="#">Equipo</a></li>
+      <li class="footer__item">
+        <a class="footer__link" href="#">Quiénes Somos</a>
       </li>
-      <li class="footer-item"><a class="list" href="#">Contacto</a></li>
+      <li class="footer__item">
+        <a class="footer__link" href="#">Contacto</a>
+      </li>
     </ul>
   </nav>
 
-  <div class="footer-img">
+  <div class="footer__img">
     <img class="logo" src="./assets/images/logo-adalab.png" alt="LOGO" />
   </div>
 </footer>
