--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -5,33 +5,36 @@
   height: 250px;
 }
 
-.footer-name {
+.footer__name {
+  font-family: $font-family-cards;
+  color: $cool-grey;
   padding-top: 30px;
 }
 
-.footer-nav {
+.footer__nav {
   padding-top: 20px;
   display: flex;
 }
 
-.ul {
+.footer__nav__ul {
+  font-family: $font-family-cards;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.footer-item {
+.footer__item {
   list-style: none;
   text-transform: uppercase;
   justify-content: center;
 }
 
-.list {
+.footer__link {
   text-decoration: none;
-  color: $black;
+  color: $gunmetal;
 }
 
-.footer-img {
+.footer__img {
   padding-top: 30px;
 }
 
