added link header

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,10 +1,10 @@
-<header class="header">
-  <h1 class="name">Nombre del grupo</h1>
+<header class="header-menu">
+  <h1 class="name">Rebirth Web</h1>
   <nav>
     <ul class="navegation">
-      <li><a href="#"></a>Equipo</li>
-      <li><a href="#"></a>Quienes Somos</li>
-      <li><a href="#"></a>Contacto</li>
+      <li><a href=".index.html/#team">Equipo</li></a>
+      <li><a href=".index.html/#about-us">Quienes Somos</a></li>
+      <li><a href=".contact.html">Contacto</a></li>
     </ul>
   </nav>
 </header>
