--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,10 +1,14 @@
-header {
+ul {
+  list-style: none;
+  text-decoration: none;
+}
+.header-menu {
   text-transform: uppercase;
   position: fixed;
   width: 100%;
   z-index: 100;
   top: 0;
-  margin: 0;
+  left: 0;
   color: $white;
   font-family: $font-family-header;
   opacity: 90%;
@@ -18,15 +22,12 @@ header {
   justify-content: center;
   align-items: center;
 }
-ul {
-  list-style: none;
-  text-decoration: none;
-}
+
 .navegation {
   background-color: $aqua;
   font-size: 15px;
-  padding: 8px 17px 7px 16px;
+  height: 45px;
   display: flex;
-  justify-content: center;
+  align-items: center;
   justify-content: space-around;
 }
