added header with sass

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,5 +1,5 @@
-<header class="header-menu">
-  <h1 class="name">Rebirth Web</h1>
+<header class="header_menu">
+  <h1 class="header_menu_name">Rebirth Web</h1>
   <nav>
     <ul class="navegation">
       <li><a href=".index.html/#team">Equipo</li></a>
