--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,7 +2,7 @@ ul {
   list-style: none;
   text-decoration: none;
 }
-.header-menu {
+.header_menu {
   text-transform: uppercase;
   position: fixed;
   width: 100%;
@@ -12,8 +12,7 @@ ul {
   color: $white;
   font-family: $font-family-header;
   opacity: 90%;
-}
-.name {
+& name {
   background-color: $blue-green;
   height: 60px;
   padding: 15px;
@@ -22,7 +21,7 @@ ul {
   justify-content: center;
   align-items: center;
 }
-
+}
 .navegation {
   background-color: $aqua;
   font-size: 15px;
