--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,10 +1,10 @@
-<header class="header_menu">
-  <h1 class="header_menu_name">Rebirth Web</h1>
+<header class="header">
+  <h1 class="header__name">Rebirth Web</h1>
   <nav>
     <ul class="navegation">
-      <li><a href=".index.html/#team">Equipo</li></a>
-      <li><a href=".index.html/#about-us">Quienes Somos</a></li>
-      <li><a href=".contact.html">Contacto</a></li>
+      <li ><a href=".index.html/#team" class="navegation__list">Equipo</li></a>
+      <li ><a href=".index.html/#about-us" class="navegation__list">Quienes Somos</a></li>
+      <li ><a href=".contact.html" class="navegation__list">Contacto</a></li>
     </ul>
   </nav>
 </header>
