added fonts section

--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -1,11 +1,14 @@
 <section>
-  <div class="hero"></div>
-  <h2 class="lema">Tejiendo sueños, forjando éxito</h2>
+  <div class="hero">
+    <div class="lema"> 
+      <h2>Tejiendo sueños, forjando éxito</h2>
+    </div>
+  </div>
 </section>
 
 <section class="section1">
   <div>
-    <h2 class="team">Equipo</h2>
+    <h2 class="team" id="team">Equipo</h2>
     <p class="parrafo">
       Demostramos una resuelta determinación y un compromiso inquebrantable
       con nuestra formación, compartimos la misma pasión por la tecnología, diseño digital y mostramos una
