--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -6,17 +6,17 @@
   </div>
 </section>
 
-<section class="section1">
+<section class="teamcontainer" id="teamcontainer">
   <div>
-    <h2 class="team" id="team">Equipo</h2>
-    <p class="parrafo">
+    <h2 class="teamcontainer__title">Equipo</h2>
+    <p class="teamcontainer__text">
       Demostramos una resuelta determinación y un compromiso inquebrantable
       con nuestra formación, compartimos la misma pasión por la tecnología, diseño digital y mostramos una
       incansable
       voluntad de aprender y
       evolucionar.
     </p>
-    <p class="parrafo">
+    <p class="teamcontainer__text">
       Nuestra perspectiva orientada a cumplir los objetivos que nos proponemos y el deseo por asegurarnos un futuro
       profesional en un campo altamente competitivo y en constante cambio nos convierte en un grupo formidable y
       prometedor.
@@ -24,17 +24,17 @@
   </div>
 </section>
 
-<section class="section2">
-  <div class="simbol"></div>
+<section class="container" id="container">
+  <div class="square"></div>
   <div>
-    <h3 class="skills">Fortalezas</h3>
-    <p class="parrafo">
+    <h3 class="container__name">Fortalezas</h3>
+    <p class="container__text">
       La comunicación efectiva, confianza mutua,
       respeto por la diversidad y apoyo mutuo son cinco de las fortalezas que crea la unión en un equipo de trabajo
       como el nuestro. Es esencial para lograr nuestros objetivos.
     </p>
-    <h3 class="skills">Debilidades</h3>
-    <p class="parrafo">
+    <h3 class="container__name">Debilidades</h3>
+    <p class="container__text">
       Siempre se puede mejorar, algunas podemos tener menos experiencia en ciertas áreas, miedo a tener un conflicto
       por estar en desacuerdo, ser mas lentas o tener una organización diferente.
       Pero ante todo somos un equipo y todas remamos hacia delante, si una se atasca el resto tira de ella.
