--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -18,12 +18,15 @@
     z-index: 3;
     transform: translateY(470px);
   }
-  .section1 {
+  .teamcontainer__text {
     text-align: center;
+    font-family: $font-family-cards;
+    line-height: normal;
+    color: $gunmetal;
     margin-left: 15px;
     margin-right: 15px;
   }
-  .team {
+  .teamcontainer__title {
     font-family: $font-family-header;
     font-weight: 500;
     color: $aqua;
@@ -33,11 +36,11 @@
     padding-top: 50px;
     padding-bottom: 15px;
   }
-  .section1 div {
+  .teamcontainer div {
     padding-top: 30px;
     padding-bottom: 30px;
   }
-  .simbol {
+  .square {
     background-color: $white;
     width: 30px;
     height: 30px;
@@ -46,7 +49,7 @@
     justify-content: center;
     rotate: 45deg;
   }
-  .section2 {
+  .container {
     background-color: rgba(74, 72, 72, 0.057);
     text-align: center;
     padding: 20px 15px;
@@ -54,7 +57,7 @@
     display: flex;
     justify-content: center;
   }
-  .skills {
+  .container__name {
     font-family: $font-family-header;
     color: $blue-green;
     font-weight: 500;
@@ -63,7 +66,7 @@
     padding-top: 15px;
     padding-bottom: 15px;
   }
-  .parrafo {
+  .container__text {
     font-family: $font-family-cards;
     color: $gunmetal;
     font-size: 16px;
