--- a/src/html/partials/team_adalabers.html
+++ b/src/html/partials/team_adalabers.html
@@ -1,28 +1,27 @@
 <section>
-  <h2 class="about-title">Quiénes Somos</h2>
-  <div class="card-container">
-    <article class="card">
-      <img class="picture" src="./assets/images/photo-Ana.jpg" alt="Foto de Ana.">
-
-
-      <h3 class="picture-title">Ana Algorri Álvarez</h3>
-
-      <p class="picture-description">Soy de Santander y tengo 27 años. He estudiado un grado en Creación y Diseño y
-        un
-        máster en Diseño Gráfico
-        Digital. Tras varias experiencias laborales decidí iniciarme en el mundo de la programación a través de un
-        bootcamp. Ahora, traigo toda mi creatividad y atención al detalle al mundo del desarrollo web.</p>
-
-      <div class="icon-box">
-        <ul class="icons">
-          <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
-          <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
-          <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
-          <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
-        </ul>
-      </div>
-  </div>
-  </article>
+  <h2 class="about-title" id="about-us">Quiénes Somos</h2>
+        <div class="card">
+          
+            <img class="card__picture" src="./assets/images/photo-Ana.jpg" alt="Foto de Ana.">
+            
+      
+            <div class="card__info">
+            <h3 class="card__title">Ana Algorri Álvarez</h3>
+      
+            <p class="card__description">Soy de Santander y tengo 27 años. He estudiado un grado en Creación y Diseño y
+              un
+              máster en Diseño Gráfico
+              Digital. Tras varias experiencias laborales decidí iniciarme en el mundo de la programación a través de un
+              bootcamp. Ahora, traigo toda mi creatividad y atención al detalle al mundo del desarrollo web.</p>
+            
+              <ul class="card__icons">
+                <li><a href="#"><i class="card__icons--icon fa-brands fa-twitter"></i></a></li>
+                <li><a href=""><i class="card__icons--icon fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href=""><i class="card__icons--icon fa-brands fa-github-alt"></i></a></li>
+                <li><a href=""><i class="card__icons--icon fa-solid fa-envelope"></i></a></li>
+              </ul>
+            </div>
+          </div>
   <div class="card-container">
     <article class="card">
       <img class="picture" src="./assets/images/photo-Andrea.jpg" alt="Foto de Andrea.">
