--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -1,6 +1,6 @@
 <section>
   <div class="hero">
-    <div class="lema"> 
+    <div class="hero__lema"> 
       <h2>Tejiendo sueños, forjando éxito</h2>
     </div>
   </div>
