--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,10 +1,10 @@
 <header class="header">
-  <h1 class="header__name">Rebirth Web</h1>
+  <h1 class="header__name"> <a href="./index.html" title="Rebirth" class="navegation__list">Rebirth Web</a></h1>
   <nav>
     <ul class="navegation">
-      <li ><a href=".index.html/#team" class="navegation__list">Equipo</li></a>
-      <li ><a href=".index.html/#about-us" class="navegation__list">Quienes Somos</a></li>
-      <li ><a href=".contact.html" class="navegation__list">Contacto</a></li>
+      <li><a href="#teamcontainer" title="Ir a Equipo" class="navegation__list">Equipo</li></a>
+      <li><a href="#about-us" title="Ir a Quienes Somos" class="navegation__list">Quienes Somos</a></li>
+      <li><a href="#" title="Ir a Contacto" class="navegation__list" >Contacto</a></li>
     </ul>
   </nav>
 </header>
