--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -4,42 +4,77 @@
   flex-direction: column;
   height: 250px;
 }
-
+@media (min-width: 768px){
+  .footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    height: 170px ;
+  }
+}
 .footer__name {
   font-family: $font-family-cards;
   color: $cool-grey;
-  padding-top: 30px;
+  align-items: end;
 }
-
+@media (min-width: 768px){
+  .footer__name {
+    margin-left: 45px;
+    margin-top: 30px;
+  }
+}
 .footer__nav {
   padding-top: 20px;
   display: flex;
 }
-
+@media (min-width: 768px){
+  .footer__nav {
+    display: grid;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    justify-self: right;
+    justify-items: center;
+    padding-right: 45px;
+    padding-bottom: 56px;
+  }
+}
 .footer__nav__ul {
   font-family: $font-family-cards;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
+/*@media (min-width: 768px){
+  .footer__nav__ul{
+    text-align:justify;
+  }
+}*/
 .footer__item {
   list-style: none;
   text-transform: uppercase;
   justify-content: center;
 }
-
 .footer__link {
   text-decoration: none;
   color: $gunmetal;
 }
-
+/*@media (min-width: 768px){
+  .footer__link{
+    text-align:end;
+  }
+}*/
 .footer__img {
   padding-top: 30px;
 }
-
+@media (min-width: 768px) {
+  .footer__img {
+    margin-left: 45px;
+    margin-bottom: 60px;
+  }
+}
 .logo {
   height: 45px;
   width: 115.9px;
 }
-
