--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -33,8 +33,8 @@
       respeto por la diversidad y apoyo mutuo son cinco de las fortalezas que crea la unión en un equipo de trabajo
       como el nuestro. Es esencial para lograr nuestros objetivos.
     </p>
-    <h3 class="container__name">Debilidades</h3>
-    <p class="container__text">
+    <h3 class="container__name1">Debilidades</h3>
+    <p class="container__text1">
       Siempre se puede mejorar, algunas podemos tener menos experiencia en ciertas áreas, miedo a tener un conflicto
       por estar en desacuerdo, ser mas lentas o tener una organización diferente.
       Pero ante todo somos un equipo y todas remamos hacia delante, si una se atasca el resto tira de ella.
