--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -22,28 +22,39 @@
         margin-right: 300px;
         opacity: 0.8;
         margin-left: 45px;
-        transform: translateY(225px);
+        transform: translateY(228px);
       }
      
   } 
  }
- .teamcontainer__title {
-    font-family: $font-family-header;
-    font-weight: 500;
-    color: $aqua;
-    font-size: 24px;
-    text-align: center;
-    text-transform: uppercase;
-    padding-top: 50px;
-    padding-bottom: 15px;
+ .teamcontainer{
+      @media all and (min-width: 768px){
+      padding-left: 90px;
+      padding-right: 90px;
+    }
+
+ }
+  .teamcontainer__title {
+        font-family: $font-family-header;
+        font-weight: 500;
+        color: $blue-green;
+        font-size: 24px;
+        text-align: center;
+        text-transform: uppercase;
+        padding-top: 50px;
+        padding-bottom: 15px;
+
   }
-  .teamcontainer__text {
+   .teamcontainer__text {
     text-align: center;
     font-family: $font-family-cards;
-    line-height: normal;
     color: $gunmetal;
+    line-height: normal;
     margin-left: 15px;
     margin-right: 15px;
+    padding-bottom: 15px;
+    opacity: 0.7;
+    
   }
   
   .teamcontainer div {
@@ -66,7 +77,7 @@
     position: relative;
     display: flex;
     justify-content: center;
-
+    
     &__name {
       font-family: $font-family-header;
       color: $blue-green;
@@ -75,6 +86,9 @@
       text-align: center;
       padding-top: 15px;
       padding-bottom: 15px;
+      @media all and (min-width:768px){
+      
+      }
     }
 
     &__text {
@@ -83,5 +97,24 @@
       font-size: 16px;
       line-height: normal;
       text-align: center;
+    }
+    &__name1 {
+      font-family: $font-family-header;
+      color: $blue-green;
+      font-weight: 500;
+      font-size: 22px;
+      text-align: center;
+      padding-top: 15px;
+      padding-bottom: 15px;
+      @media all and (min-width:768px){
+      }
+
+    &__text1 {
+        font-family: $font-family-cards;
+        color: $gunmetal;
+        font-size: 16px;
+        line-height: normal;
+        text-align: center;
+      }
     }
   }
