--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -1,11 +1,10 @@
 <section>
   <div class="hero">
-    <div class="hero__lema"> 
+    <div class="hero__lema">
       <h2>Tejiendo sueños, forjando éxito</h2>
     </div>
   </div>
 </section>
-
 <section class="teamcontainer" id="teamcontainer">
   <div>
     <h2 class="teamcontainer__title">Equipo</h2>
@@ -23,21 +22,24 @@
     </p>
   </div>
 </section>
-
 <section class="container" id="container">
   <div class="square"></div>
-  <div>
-    <h3 class="container__name">Fortalezas</h3>
-    <p class="container__text">
-      La comunicación efectiva, confianza mutua,
-      respeto por la diversidad y apoyo mutuo son cinco de las fortalezas que crea la unión en un equipo de trabajo
-      como el nuestro. Es esencial para lograr nuestros objetivos.
-    </p>
-    <h3 class="container__name1">Debilidades</h3>
-    <p class="container__text1">
-      Siempre se puede mejorar, algunas podemos tener menos experiencia en ciertas áreas, miedo a tener un conflicto
-      por estar en desacuerdo, ser mas lentas o tener una organización diferente.
-      Pero ante todo somos un equipo y todas remamos hacia delante, si una se atasca el resto tira de ella.
-    </p>
+  <div class="div0">
+    <div class="div1">
+      <h3 class="container__name">Fortalezas</h3>
+      <p class="container__text">
+        La comunicación efectiva, confianza mutua,
+        respeto por la diversidad y apoyo mutuo son cinco de las fortalezas que crea la unión en un equipo de trabajo
+        como el nuestro. Es esencial para lograr nuestros objetivos.
+      </p>
+    </div>
+    <div class="div2">
+      <h3 class="container__name">Debilidades</h3>
+      <p class="container__text">
+        Siempre se puede mejorar, algunas podemos tener menos experiencia en ciertas áreas, miedo a tener un conflicto
+        por estar en desacuerdo, ser mas lentas o tener una organización diferente.
+        Pero ante todo somos un equipo y todas remamos hacia delante, si una se atasca el resto tira de ella.
+      </p>
+    </div>
   </div>
 </section>
