--- a/src/scss/layout/_team_adalabers.scss
+++ b/src/scss/layout/_team_adalabers.scss
@@ -27,47 +27,85 @@
   margin: 0 15px;
   text-align: center;
   align-content: center;
+
+  &__picture {
+    border: 5px solid $black-8;
+    border-radius: 4px;
+    width: 185px;
+    max-height: 185px;
+    align-self: center;
+    @media (min-width:768px) and (max-width: 1200px) {
+      width: 205px;
+      max-height: 205px;
+    }
+    @media (min-width:1200px) {
+      width: 255px;
+      max-height: 255px;
+    }
   }
-
-.card__picture {
-  border: 5px solid $black-8;
-  border-radius: 4px;
-  width: 185px;
-  max-height: 185px;
-  align-self: center;
+  &__title {
+    font-family: $font-family-cards;
+    font-weight: 600;
+    font-size: 20px;
+    padding: 15px;
+    align-content: center;
+  }
+  &__description {
+    display: flex;
+    color: $gunmetal;
+    font-family: $font-family-cards;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    align-content: center;
+    margin-top: 5px;
+    max-width: 300px;
+    @media (min-width:768px) and (max-width: 1200px){
+      max-width: 500px;
+    }
+    @media (min-width: 1200px){
+      max-width: 700px;
+    }
+  }
+  &__icons {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    gap: 15px;
+    padding: 20px;
+    text-align: center;
+  }
+  &__icons--icon{
+    color: $blue-green;
+  }
 }
-.card__title {
-  font-family: $font-family-cards;
-  font-weight: 600;
-  font-size: 20px;
-  padding: 15px;
-  align-content: center;
+
+@media (min-width:768px) and (max-width: 1200px) {
+  .card:nth-child(even) {
+    text-align:left;
+    flex-direction:row;
+    padding-left: 60px;
+    gap:30px;
+  }
+  .card:nth-child(odd){
+    text-align:right;
+    flex-direction:row-reverse;
+    padding-right: 60px;
+    gap:30px;
+  }
 }
-.card__description {
-  display: flex;
-  color: $gunmetal;
-  font-family: $font-family-cards;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  align-content: center;
-  margin-top: 5px;
-  max-width: 300px;
+@media(min-width: 1200px) {
+  .card:nth-child(even) {
+    text-align:left;
+    flex-direction:row;
+    padding-left: 160px;
+    gap:30px;
+  }
+  .card:nth-child(odd){
+    text-align:right;
+    flex-direction:row-reverse;
+    padding-right: 160px;
+    gap:30px;
+  }
 }
-.card__icons {
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-  gap: 15px;
-  padding: 20px;
-  text-align: center;
-}
-.card__icons--icon{
-  color: $blue-green;
-}
-
-
-
-
-
 
