--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,75 +1,92 @@
 .hero {
-    background-image: url(../images/imagen.jpg);
-    height: 500px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-  .lema {
-    background-color: $white;
-    color: $black;
-    font-family: $font-family-header;
-    font-weight: 500;
-    font-size: 18px;
-    padding: 15px 10px;
-    text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-    z-index: 3;
-    transform: translateY(470px);
-  }
-  .teamcontainer__text {
-    text-align: center;
-    font-family: $font-family-cards;
-    line-height: normal;
-    color: $gunmetal;
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-  .teamcontainer__title {
-    font-family: $font-family-header;
-    font-weight: 500;
-    color: $aqua;
-    font-size: 24px;
-    text-align: center;
-    text-transform: uppercase;
-    padding-top: 50px;
-    padding-bottom: 15px;
-  }
-  .teamcontainer div {
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-  .square {
-    background-color: $white;
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    top: -25px;
-    justify-content: center;
-    rotate: 45deg;
-  }
-  .container {
-    background-color: rgba(74, 72, 72, 0.057);
-    text-align: center;
-    padding: 20px 15px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-  }
-   .container__name {
-    font-family: $font-family-header;
-    color: $blue-green;
-    font-weight: 500;
-    font-size: 22px;
-    text-align: center;
-    padding-top: 15px;
-    padding-bottom: 15px;
-  }
-  .container__text {
-    font-family: $font-family-cards;
-    color: $gunmetal;
-    font-size: 16px;
-    line-height: normal;
-    text-align: center;
-  }
+  background-image: url(../images/imagen.jpg);
+  height: 500px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.lema {
+  background-color: $white;
+  color: $black;
+  font-family: $font-family-header;
+  font-weight: 500;
+  font-size: 18px;
+  padding: 15px 10px;
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  z-index: 3;
+  transform: translateY(470px);
+}
+.teamcontainer__text {
+  text-align: center;
+  font-family: $font-family-cards;
+  line-height: normal;
+  color: $gunmetal;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+.teamcontainer__title {
+  font-family: $font-family-header;
+  font-weight: 500;
+  color: $aqua;
+  font-size: 24px;
+  text-align: center;
+  text-transform: uppercase;
+  padding-top: 50px;
+  padding-bottom: 15px;
+}
+.teamcontainer div {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.square {
+  background-color: $white;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: -25px;
+  justify-content: center;
+  rotate: 45deg;
+  z-index: 100;
+}
+.container {
+  background-color: rgba(74, 72, 72, 0.057);
+  text-align: center;
+  padding: 20px 15px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.div0{
+@media (min-width:768px) {
+  display: flex;
+  gap: 50px;
+}
+}
+.div1{
+@media (min-width:768px) {
+  width: 50%;
+}
+}
+.div2{
+@media (min-width:768px){
+  width: 50%;
+}
+}
+ .container__name {
+  font-family: $font-family-header;
+  color: $blue-green;
+  font-weight: 500;
+  font-size: 22px;
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.container__text {
+  font-family: $font-family-cards;
+  color: $gunmetal;
+  font-size: 16px;
+  line-height: normal;
+  text-align: center;
+}
