--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,29 +1,30 @@
 .hero {
-  background-image: url(../images/retocada.png);
-  height: 17rem;
+  background-image: url(../images/imagen.jpg);
+  height: 500px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  &__lema {
-    background-color: $white;
-    color: $black;
-    font-family: $font-family-header;
-    font-weight: 500;
-    font-size: 18px;
-    padding: 15px 10px;
-    text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-    z-index: 3;
-    transform: translateY(260px);
-    @media all and (min-width:768px){
-      display: flex;
-      margin-right: 300px;
-      opacity: 0.8;
-      margin-left: 45px;
-      transform: translateY(225px);
-    }
 }
+.lema {
+  background-color: $white;
+  color: $black;
+  font-family: $font-family-header;
+  font-weight: 500;
+  font-size: 18px;
+  padding: 15px 10px;
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  z-index: 3;
+  transform: translateY(470px);
+}
+.teamcontainer__text {
+  text-align: center;
+  font-family: $font-family-cards;
+  line-height: normal;
+  color: $gunmetal;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 .teamcontainer__title {
   font-family: $font-family-header;
@@ -34,14 +35,6 @@
   text-transform: uppercase;
   padding-top: 50px;
   padding-bottom: 15px;
-}
-.teamcontainer__text {
-  text-align: center;
-  font-family: $font-family-cards;
-  line-height: normal;
-  color: $gunmetal;
-  margin-left: 15px;
-  margin-right: 15px;
 }
 .teamcontainer div {
   padding-top: 30px;
@@ -55,6 +48,7 @@
   top: -25px;
   justify-content: center;
   rotate: 45deg;
+  z-index: 100;
 }
 .container {
   background-color: rgba(74, 72, 72, 0.057);
@@ -63,20 +57,36 @@
   position: relative;
   display: flex;
   justify-content: center;
-  &__name {
-    font-family: $font-family-header;
-    color: $blue-green;
-    font-weight: 500;
-    font-size: 22px;
-    text-align: center;
-    padding-top: 15px;
-    padding-bottom: 15px;
-  }
-  &__text {
-    font-family: $font-family-cards;
-    color: $gunmetal;
-    font-size: 16px;
-    line-height: normal;
-    text-align: center;
-  }
+}
+.div0{
+@media (min-width:768px) {
+  display: flex;
+  gap: 50px;
+}
+}
+.div1{
+@media (min-width:768px) {
+  width: 50%;
+}
+}
+.div2{
+@media (min-width:768px){
+  width: 50%;
+}
+}
+ .container__name {
+  font-family: $font-family-header;
+  color: $blue-green;
+  font-weight: 500;
+  font-size: 22px;
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.container__text {
+  font-family: $font-family-cards;
+  color: $gunmetal;
+  font-size: 16px;
+  line-height: normal;
+  text-align: center;
 }
