--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -8,18 +8,14 @@
     <ul class="navegation">
       <li>
         <a href="#teamcontainer" title="Ir a Equipo" class="navegation__list"
-          >Equipo</a
-        >
+          >Equipo</a>
       </li>
       <li>
-        <a href="#about-us" title="Ir a Quienes Somos" class="navegation__list"
-          >Quienes Somos</a
-        >
+        <a href="#about-us" title="Ir a Quienes Somos" class="navegation__list">Quienes Somos</a>
       </li>
       <li>
         <a href="./contact.html" title="Ir a Contacto" class="navegation__list"
-          >Contacto</a
-        >
+          >Contacto</a>
       </li>
     </ul>
   </nav>
