--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -1,43 +1,50 @@
 .header {
-    text-transform: uppercase;
-    position: fixed;
-    width: 100%;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    font-family: $font-family-header;
-    opacity: 90%;
-    color: $white;
-      &__name {
-        background-color: $blue-green;
-        height: 60px;
-        padding: 15px;
-        font-size: 16px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-    }
-  .navegation {
-    background-color: $aqua;
-    font-size: 15px;
-    height: 45px;
+  text-transform: uppercase;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  font-family: $font-family-header;
+  opacity: 90%;
+  color: $white; 
+  &__name {
+    background-color: $blue-green;
+    height: 60px;
+    padding: 15px;
+    font-size: 16px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    &__list{
-      color: $white;
+    justify-content: center;
+    :hover{
+      transform: scale(0.9);
     }
   }
+}
   @media all and (min-width: 768px) {
-    .header{
-      display: flex;
+  .header{
+    display: flex;
       &__name {
-      width: 65%;
-      padding-left: 45px;
-      align-items: center;justify-content: start;
+    width: 65%;
+    padding-left: 45px;
+    align-items: center;justify-content: start;
     }
   }
+}
+
+.navegation {
+  background-color: $aqua;
+  font-size: 15px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  &__list{
+    color: $white;
+  }
+} 
+
+  @media all and (min-width: 768px){
     .navegation {
       height: 60px;
       width: 120%;
@@ -47,12 +54,66 @@
       gap: 10px;
     }
   }
+
   @media all and (min-width: 1200px){
     .navegation {
       padding-right: 138px;
       padding-left: 45px;
   }
   }
+
+.image{
+  background-color: salmon;
+  height: 300px;
+}
+
+.section{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 15px;
+  &__title{
+    text-transform: uppercase;
+    font-size: 24px;
+    color: $blue-green;
+    font-family: $font-family-header;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  &--parrafo{
+    margin-bottom: 20px;
+    font-family: $font-family-cards;
+    color: $gunmetal;
+   }
+  }
+}
+.form{
+  display: flex;
+  flex-direction: column;
+  margin: 50px;
+    &__name{
+      font-size: 14px;
+      font-family: $font-family-cards;
+      color: $gunmetal;
+      margin: 15px;
+      :focus{
+        background-color: $aqua;
+    &--email::placeholder{
+        color: black;
+    }
+    }
+    }
+}
+
+.button{
+  background-color: $blue-green;
+  color: $white;
+  font-family: $font-family-cards;
+  text-transform: uppercase;
+  padding: 10px;
+  margin: 15px;
+  border-radius: 10px;
+}
+
   .footer {
     display: flex;
     align-items: center;
@@ -96,4 +157,4 @@
   .logo {
     height: 45px;
     width: 115.9px;
-  }  
+  }
