--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -18,17 +18,24 @@
     transform: translateY(260px);
     @media all and (min-width:768px){
       display: flex;
-      margin-right: 300px;
+      margin-right: 400px;
       opacity: 0.8;
       margin-left: 45px;
-      transform: translateY(225px);
+      padding-left: 30px;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      transform: translateY(215px)
+    }
+    @media all and (min-width:1200px){
+      margin-right: 488px;
+      margin-left: 138px;
     }
 }
 }
 .teamcontainer__title {
   font-family: $font-family-header;
   font-weight: 500;
-  color: $aqua;
+  color: $blue-green;
   font-size: 24px;
   text-align: center;
   text-transform: uppercase;
@@ -42,6 +49,14 @@
   color: $gunmetal;
   margin-left: 15px;
   margin-right: 15px;
+  @media all and (min-width:768px){
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  @media all and (min-width:1200px){
+    padding-left: 300px;
+    padding-right: 300px;
+  }
 }
 .teamcontainer div {
   padding-top: 30px;
@@ -63,6 +78,7 @@
   position: relative;
   display: flex;
   justify-content: center;
+
   &__name {
     font-family: $font-family-header;
     color: $blue-green;
@@ -79,4 +95,22 @@
     line-height: normal;
     text-align: center;
   }
+}  
+.div0{
+  @media all and (min-width: 768px){
+    height: 333px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding-top: 45px;
+    padding-left: 40px;
+    padding-right: 40px;
+    gap: 30px;
+    }
+    @media all and (min-width: 1200px){
+    height: 309px;
+    padding-top: 45px;
+    padding-left: 138px;
+    padding-right: 138px;
+    }
 }
