added corrected mediaqueries hero

--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -23,9 +23,9 @@
   </div>
 </section>
 <section class="container" id="container">
-  <div class="square"></div>
-  <div class="div0">
-    <div class="div1">
+  <div class="container__square"></div>
+  <div class="container__div0">
+    <div class="container__div0__div1">
       <h3 class="container__name">Fortalezas</h3>
       <p class="container__text">
         La comunicación efectiva, confianza mutua,
