--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -5,33 +5,6 @@
   background-repeat: no-repeat;
   background-position: center;
   &__lema {
-    background-color: $white;
-    color: $black;
-    font-family: $font-family-header;
-    font-weight: 500;
-    font-size: 18px;
-    padding: 15px 10px;
-    text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-    z-index: 3;
-    transform: translateY(260px);
-    @media all and (min-width:768px){
-      display: flex;
-      margin-right: 400px;
-      opacity: 0.8;
-      margin-left: 45px;
-      padding-left: 30px;
-      padding-top: 20px;
-      padding-bottom: 20px;
-      transform: translateY(215px)
-    }
-    @media all and (min-width:1200px){
-      margin-right: 488px;
-      margin-left: 138px;
-    }
-}
-.lema {
   background-color: $white;
   color: $black;
   font-family: $font-family-header;
@@ -43,16 +16,24 @@
   margin-right: 20px;
   z-index: 3;
   transform: translateY(470px);
+  @media all and (min-width:768px){
+    display: flex;
+    margin-right: 400px;
+    opacity: 0.8;
+    margin-left: 45px;
+    padding-left: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    transform: translateY(445px)
+  }
+  @media all and (min-width:1200px){
+    margin-right: 488px;
+    margin-left: 138px;
+  }
 }
-.teamcontainer__text {
-  text-align: center;
-  font-family: $font-family-cards;
-  line-height: normal;
-  color: $gunmetal;
-  margin-left: 15px;
-  margin-right: 15px;
 }
-.teamcontainer__title {
+.teamcontainer{
+  &__title {
   font-family: $font-family-header;
   font-weight: 500;
   color: $blue-green;
@@ -60,37 +41,25 @@
   text-align: center;
   text-transform: uppercase;
   padding-top: 50px;
-  padding-bottom: 15px;
-}
-.teamcontainer__text {
-  text-align: center;
-  font-family: $font-family-cards;
-  line-height: normal;
-  color: $gunmetal;
-  margin-left: 15px;
-  margin-right: 15px;
-  @media all and (min-width:768px){
-    padding-left: 40px;
-    padding-right: 40px;
+  padding-bottom: px;
   }
-  @media all and (min-width:1200px){
-    padding-left: 300px;
-    padding-right: 300px;
+  &__text {
+    text-align: center;
+    font-family: $font-family-cards;
+    line-height: normal;
+    color: $gunmetal;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-bottom: 20px;
+    @media all and (min-width:768px){
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+    @media all and (min-width:1200px){
+      padding-left: 300px;
+      padding-right: 300px;
+    }
   }
-}
-.teamcontainer div {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-.square {
-  background-color: $white;
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  top: -25px;
-  justify-content: center;
-  rotate: 45deg;
-  z-index: 100;
 }
 .container {
   background-color: rgba(74, 72, 72, 0.057);
@@ -100,38 +69,48 @@
   display: flex;
   justify-content: center;
 
-  &__name {
-    font-family: $font-family-header;
-    color: $blue-green;
-    font-weight: 500;
-    font-size: 22px;
-    text-align: center;
-    padding-top: 15px;
-    padding-bottom: 15px;
+  &__square {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: -10px;
+    justify-content: center;
+    rotate: 45deg;
+    z-index: 100;
+    background-color: $white;
   }
-  &__text {
-    font-family: $font-family-cards;
-    color: $gunmetal;
-    font-size: 16px;
-    line-height: normal;
-    text-align: center;
+
+  &__div0{
+    &__div1{
+    @media (min-width:768px) {
+    width: 50%;
+    }
   }
-}  
-.div0{
-  @media all and (min-width: 768px){
-    height: 333px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    padding-top: 45px;
-    padding-left: 40px;
-    padding-right: 40px;
-    gap: 30px;
-    }
-    @media all and (min-width: 1200px){
-    height: 309px;
-    padding-top: 45px;
-    padding-left: 138px;
-    padding-right: 138px;
-    }
+  @media (min-width:768px) {
+  display: flex;
+  gap: 50px;
+  }
+  }
+}
+
+.div2{
+@media (min-width:768px){
+  width: 50%;
+}
+}
+ .container__name {
+  font-family: $font-family-header;
+  color: $blue-green;
+  font-weight: 500;
+  font-size: 22px;
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.container__text {
+  font-family: $font-family-cards;
+  color: $gunmetal;
+  font-size: 16px;
+  line-height: normal;
+  text-align: center;
 }
